Update to support v24.34

--- a/force-app/main/default/classes/JiraCloudDeploymentsConnector.cls
+++ b/force-app/main/default/classes/JiraCloudDeploymentsConnector.cls
@@ -5,29 +5,47 @@ global with sharing class JiraCloudDeploymentsConnector extends copado.Automatio
     @TestVisible private static String templateName = 'Jira_Deployment_Notification_1'; //API Name of the Job Template
 
     global override List<copado.AutomationConnector> getConnectors(copado.AutomationConnectorContext context) {
-
-        copado__Automation_Event__c aEvent = [SELECT Id, copado__Job_Execution_Id__c FROM copado__Automation_Event__c WHERE Id = :context.automationEvents[0].Id];
-       
-        copado__JobExecution__c je = [SELECT Id, copado__Deployment__r.copado__Promotion__c, copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c, copado__Deployment__r.copado__Promotion__r.copado__Destination_Environment__c, copado__DataJson__c FROM copado__JobExecution__c WHERE Id = :aEvent.copado__Job_Execution_Id__c];
-       
+        copado__Automation_Event__c aEvent = [
+            SELECT Id, copado__Job_Execution_Id__c 
+            FROM copado__Automation_Event__c 
+            WHERE Id = :context.automationEvents[0].Id
+        ];
+        
+        copado__JobExecution__c je = [
+            SELECT 
+                Id,
+                copado__Deployment__r.copado__Promotion__c,
+                copado__Deployment__r.copado__Promotion__r.copado__Pipeline__c,
+                copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c,
+                copado__Deployment__r.copado__Promotion__r.copado__Destination_Environment__c,
+                copado__DataJson__c 
+            FROM copado__JobExecution__c 
+            WHERE Id = :aEvent.copado__Job_Execution_Id__c
+        ];
+        
         // Deserialize the JSON string into a map
         Map<String, Object> json = (Map<String, Object>) JSON.deserializeUntyped(je.copado__DataJson__c);
-
-        // Access the deploymentDryRun variable from the map
         Boolean deploymentDryRun = (Boolean) json.get('deploymentDryRun');
-
-        if(deploymentDryRun) {
+        if (deploymentDryRun) {
             return null;
-        } else {
-            jobTemplateRequest = new copado.CreateExecution.Request();
-            jobTemplateRequest.parentId = je.copado__Deployment__r.copado__Promotion__c;
-            jobTemplateRequest.pipelineId = je.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c;
-            jobTemplateRequest.destinationId = je.copado__Deployment__r.copado__Promotion__r.copado__Destination_Environment__c;
-            jobTemplateRequest.templateName = templateName;
-            jobTemplateRequest.runAfterInstantiation = true;
-            return new List<copado.AutomationConnector> {this};
         }
+
+        // pick pipeline vs fallback pipeline id from promotion's project
+        String chosenPipelineId = 
+            je.copado__Deployment__r.copado__Promotion__r.copado__Pipeline__c != null
+            ? je.copado__Deployment__r.copado__Promotion__r.copado__Pipeline__c
+            : je.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c;
+
+        jobTemplateRequest = new copado.CreateExecution.Request();
+        jobTemplateRequest.parentId        = je.copado__Deployment__r.copado__Promotion__c;
+        jobTemplateRequest.pipelineId      = chosenPipelineId;
+        jobTemplateRequest.destinationId   = je.copado__Deployment__r.copado__Promotion__r.copado__Destination_Environment__c;
+        jobTemplateRequest.templateName    = templateName;
+        jobTemplateRequest.runAfterInstantiation = true;
+
+        return new List<copado.AutomationConnector> { this };
     }
+
 
     global override String executeAutomation() {
         return copado.CreateExecution.execute(new List<copado.CreateExecution.Request>{ this.jobTemplateRequest })[0].Id;
